--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,10 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        style="@style/customButtonStyleReset"
+        android:onClick="resetScore"
+        android:text="@string/bt_reset" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:layout_width="0dp"
@@ -154,10 +162,5 @@
 
         </LinearLayout>
     </LinearLayout>
-
-    <Button
-        style="@style/customButtonStyleReset"
-        android:onClick="resetScore"
-        android:text="@string/bt_reset" />
 
 </RelativeLayout>
